<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/node_view_layout"
    android:layout_width="@dimen/node_size"
    android:layout_height="@dimen/node_size"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/command_editor"
        style="@style/Basic"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/border_width"
        android:layout_weight="1"
        android:background="@color/colorBackground"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/node_view_state_layout"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/border_width"
        android:layout_marginEnd="@dimen/border_width"
        android:layout_marginBottom="@dimen/border_width"
        android:orientation="vertical">

        <TextView
            android:id="@+id/accLabel"
            style="@style/Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:text="@string/acc_label"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/accText"
            style="@style/Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/bakLabel"
            style="@style/Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:text="@string/bak_label"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/bakText"
            style="@style/Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/lastLabel"
            style="@style/Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:text="@string/last_label"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/lastText"
            style="@style/Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/modeLabel"
            style="@style/Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:text="@string/mode_label"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/modeText"
            style="@style/Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/idleLabel"
            style="@style/Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:text="@string/idle_label"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/idleText"
            style="@style/Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:typeface="monospace" />
    </LinearLayout>

</LinearLayout>